fix(hud): fix alerts z-index

--- a/src/components/hud/hud.scss
+++ b/src/components/hud/hud.scss
@@ -167,128 +167,6 @@
     }
   }
 
-  .alerts {
-    z-index: 3;
-    position: absolute;
-    width: 900px;
-    margin-left: -450px;
-    left: 50%;
-    bottom: 50px;
-    color: white;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    .alert-dialogue {
-      width: 650px;
-      height: 100px;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      align-content: flex-start;
-      margin-bottom: 10px;
-
-      .head {
-        position: relative;
-        width: 100%;
-        height: 60px;
-        display: flex;
-        flex-direction: column;
-        align-content: space-between;
-        background: rgba(0, 0, 0, 0.5);
-        text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-
-        .text {
-          width: 100%;
-          margin: auto;
-          font-size: 18px;
-          line-height: 28px;
-          color: #ffffff;
-        }
-      }
-
-      .button {
-        margin-top: 10px;
-        width: 280px;
-        height: 40px;
-        display: flex;
-        justify-content: space-between;
-        text-transform: uppercase;
-        cursor: pointer;
-
-        .button__key {
-          width: 40px;
-          height: 100%;
-          display: flex;
-          background: rgba(0, 0, 0, 0.8);
-
-          .text {
-            margin: auto;
-            font-weight: 600;
-            font-size: 22px;
-            color: #FFFFFF;
-            position: relative;
-            top: 2px;
-          }
-        }
-
-        .button__text {
-          width: 230px;
-          height: 100%;
-          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-          backdrop-filter: blur(30px);
-          display: flex;
-
-          .text {
-            margin: auto;
-            font-weight: 600;
-            font-size: 14px;
-            color: #FFFFFF;
-          }
-        }
-
-        .button__text-accept {
-          background: rgba(236, 192, 44, 0.5);
-          box-shadow: 0 0 50px rgba(236, 192, 44, 0.45);
-        }
-
-        .button__text-cancel {
-          background: rgba(236, 44, 44, 0.5);
-          box-shadow: 0 0 50px rgba(236, 44, 44, 0.45);
-        }
-      }
-    }
-
-    .alert-item {
-      position: relative;
-      display: inline-flex;
-      flex-wrap: wrap;
-      align-items: center;
-      height: 48px;
-      background: rgba(0, 0, 0, 0.5);
-      font-size: 18px;
-      text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-      transition: all 1s;
-      left: 0;
-      opacity: 1;
-      margin-bottom: 10px;
-
-      .img-wrap {
-        width: 48px;
-        height: 48px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background: rgba(0, 0, 0, 0.8);
-      }
-
-      .text {
-        padding: 0 10px;
-      }
-    }
-  }
-
   .bottom-left-panel {
     z-index: 3;
     color: white;
@@ -373,22 +251,147 @@
       filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.5));
     }
   }
+
+}
+
+.alerts {
+  overflow: hidden;
+  font-family: Nunito, serif;
+  z-index: 100 !important;
+  position: absolute;
+  width: 900px;
+  margin-left: -450px;
+  left: 50%;
+  bottom: 50px;
+  color: white;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .alert-dialogue {
+    width: 650px;
+    height: 100px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: flex-start;
+    margin-bottom: 10px;
+
+    .head {
+      position: relative;
+      width: 100%;
+      height: 60px;
+      display: flex;
+      flex-direction: column;
+      align-content: space-between;
+      background: rgba(0, 0, 0, 0.5);
+      text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+
+      .text {
+        width: 100%;
+        margin: auto;
+        font-size: 18px;
+        line-height: 28px;
+        color: #ffffff;
+      }
+    }
+
+    .button {
+      margin-top: 10px;
+      width: 280px;
+      height: 40px;
+      display: flex;
+      justify-content: space-between;
+      text-transform: uppercase;
+      cursor: pointer;
+
+      .button__key {
+        width: 40px;
+        height: 100%;
+        display: flex;
+        background: rgba(0, 0, 0, 0.8);
+
+        .text {
+          margin: auto;
+          font-weight: 600;
+          font-size: 22px;
+          color: #FFFFFF;
+          position: relative;
+          top: 2px;
+        }
+      }
+
+      .button__text {
+        width: 230px;
+        height: 100%;
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+        backdrop-filter: blur(30px);
+        display: flex;
+
+        .text {
+          margin: auto;
+          font-weight: 600;
+          font-size: 14px;
+          color: #FFFFFF;
+        }
+      }
+
+      .button__text-accept {
+        background: rgba(236, 192, 44, 0.5);
+        box-shadow: 0 0 50px rgba(236, 192, 44, 0.45);
+      }
+
+      .button__text-cancel {
+        background: rgba(236, 44, 44, 0.5);
+        box-shadow: 0 0 50px rgba(236, 44, 44, 0.45);
+      }
+    }
+  }
+
+  .alert-item {
+    position: relative;
+    display: inline-flex;
+    flex-wrap: wrap;
+    align-items: center;
+    height: 48px;
+    background: rgba(0, 0, 0, 0.5);
+    font-size: 18px;
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    transition: all 1s;
+    left: 0;
+    opacity: 1;
+    margin-bottom: 10px;
+
+    .img-wrap {
+      width: 48px;
+      height: 48px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: rgba(0, 0, 0, 0.8);
+    }
+
+    .text {
+      padding: 0 10px;
+    }
+  }
 }
 
 @media (min-width: 2560px) {
-  .hud {
+  .hud, .alerts {
     zoom: 1.6;
   }
 }
 
 @media (max-width: 1366px) {
-  .hud {
+  .hud, .alerts {
     zoom: 0.9;
   }
 }
 
 @media (max-width: 1024px) {
-  .hud {
+  .hud, .alerts {
     zoom: 0.8;
   }
 }
